# opctoai-toolkit

./: .gitignore  NOTICE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml
apps/cloudflare-mail/: .gitignore  README.md  UPSTREAM.md  wrangler.example.toml
apps/grok/: .dockerignore  Dockerfile  EXTERNAL_CONFIG.md  README.md  browser_session.py  config.example.json  config.example.upstream.json  config.external.filled.example.json  cpa_export.py  debug_page.py  fleet_register_agent.py  grok_register_ttk.py  mise.toml  pyproject.toml  register_cli.py  requirements.docker.txt  web_app.py
apps/grok/docker/: Dockerfile.register-node  Dockerfile.slim  README.md  entrypoint.sh
apps/grok/scripts/: backfill_cpa_xai_from_accounts.py
apps/grok/templates/: index.html
apps/smtp/: Dockerfile  README.md  app.py  requirements.txt
apps/smtp/static/: index.html
config/grok/: config.json.example
config/smtp/: .env.example
docker/gateway/: nginx.conf
